fix input and background

--- a/index.html
+++ b/index.html
@@ -114,19 +114,19 @@
           <div class="range-blocks">
             <div class="under-range">
               <div id="range1" class="range"></div>
-              <span class="under-range__price">0$</span>
+              <span class="under-range__price">0</span>
             </div>
             <div class="under-range">
               <div id="range2" class="range"></div>
-              <span class="under-range__price">0$</span>
+              <span class="under-range__price">0</span>
             </div>
             <div class="under-range">
               <div id="range3" class="range"></div>
-              <span class="under-range__price">0$</span>
+              <span class="under-range__price">0</span>
             </div>
             <div class="under-range">
               <div id="range4" class="range"></div>
-              <span class="under-range__price">0$</span>
+              <span class="under-range__price">0</span>
             </div>
           </div>
         </div>
