--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <label>
               Storage:
               <input
-                oninput="changeRange('volume'), changeData()"
+                onchange="changeRange('volume'), changeData()"
                 type="text"
                 id="input-volume"
               />
@@ -36,7 +36,7 @@
             <label>
               Transfer:
               <input
-                onchange="changeRange('transfer'),changeData()"
+                onchange="changeRange('transfer'), changeData()"
                 type="text"
                 id="input-transfer"
               />
